[gd_scene load_steps=3 format=2]

[ext_resource path="res://Util/FileChooser.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Layers/LayerConfiguration/Misc/ConnectedObjectAttribute.gd" type="Script" id=2]

[node name="ConnectedObjectAttr" type="GridContainer"]
offset_top = 81.0
offset_right = 820.0
offset_bottom = 126.0
columns = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttributeValue" type="LineEdit" parent="."]
offset_right = 164.0
offset_bottom = 45.0
size_flags_horizontal = 3
placeholder_text = "attribute value"

[node name="ConnectorChooser" parent="." instance=ExtResource( 1 )]
offset_left = 172.0
offset_right = 445.0
offset_bottom = 45.0
size_flags_horizontal = 3
text_placeholder = "connector..."
filters = PackedStringArray( "*.obj", "*.tscn" )

[node name="ConnectionChooser" parent="." instance=ExtResource( 1 )]
offset_left = 453.0
offset_right = 726.0
offset_bottom = 45.0
size_flags_horizontal = 3
text_placeholder = "connection..."
filters = PackedStringArray( "*.obj", "*.tscn" )

[node name="Button" type="Button" parent="."]
offset_left = 734.0
offset_right = 846.0
offset_bottom = 45.0
size_flags_horizontal = 3
text = "Remove"
